shared/catalog-mongo.tf
resource "aws_instance" "mongo_instance" {
  ami           = "ami-0c55b159cbfafe1f0"
  instance_type = "t2.micro"
  vpc_security_group_ids = [aws_security_group.sg_shared.id]
  subnet_id     = aws_subnet.public[0].id
  associate_public_ip_address = true

  user_data = <<-EOF
              #!/bin/bash
              yum update -y
              amazon-linux-extras install -y docker
              service docker start
              usermod -a -G docker ec2-user
              curl -fsSL https://get.docker.com -o get-docker.sh
              sh get-docker.sh
              systemctl start docker
              systemctl enable docker
              docker run -d -p 27017:27017 --name mongodb mongo:latest
              EOF

  tags = {
    Name = "Catalog MongoDB-Server"
  }
}
